# kaonic-gateway

./: .gitignore  Cargo.toml  Config.toml  LICENSE
.cargo/: config.toml
.github/workflows/: build-plugins.yml
kaonic-atak-bridge/: Cargo.toml  kaonic-atak-bridge.service  kaonic-plugin.toml
kaonic-atak-bridge/src/: lib.rs  main.rs
kaonic-audio-ptt/: Cargo.toml  kaonic-audio-ptt.service  kaonic-plugin.toml
kaonic-audio-ptt/src/: audio.rs  codec.rs  config.rs  main.rs
kaonic-dashboard/: Cargo.toml
kaonic-dashboard/src/: frames.rs  lib.rs  main.rs  pages.rs
kaonic-gateway/: Cargo.toml  kaonic-plugin.toml
kaonic-gateway/assets/: style.css
kaonic-gateway/src/: app.rs  app_types.rs  atak.rs  audio.rs  config.rs  gateway_reticulum.rs  lib.rs  local_https.rs  main.rs  network.rs  radio.rs  state.rs  system_metrics.rs
kaonic-gateway/src/components/: navbar.rs
kaonic-gateway/src/http/: handlers.rs  installer.rs  mod.rs  update.rs  ws.rs
kaonic-gateway/src/pages/: dashboard.rs  media.rs  mod.rs  network.rs  plugins.rs  radio.rs  reticulum.rs  update.rs  vpn.rs
kaonic-gateway/src/settings/: db.rs  mod.rs
kaonic-installer/: Cargo.toml
kaonic-installer/src/: installer.rs  main.rs  plugins.rs
kaonic-plugin-sample/: Cargo.toml  kaonic-plugin.toml
kaonic-plugin-sample/package/: kaonic-plugin-sample.service  kaonic-plugin.toml
kaonic-plugin-sample/src/: main.rs
kaonic-reticulum/: Cargo.toml
kaonic-reticulum/src/: lib.rs
kaonic-settings/: Cargo.toml
kaonic-settings/src/: config.rs  lib.rs
kaonic-settings/src/settings/: db.rs  mod.rs
kaonic-update/: Cargo.toml
kaonic-update/src/: main.rs  update.rs
kaonic-vpn/: Cargo.toml
kaonic-vpn/src/: config.rs  interface.rs  lib.rs  vpn.rs
kaonic-vpn/src/vpn/: codec.rs  peer.rs  platform.rs  runtime.rs  types.rs
scripts/: install-sdk.sh  update_service.sh
