[package]
name = "kaonic-audio-ptt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaonic-audio-ptt"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "process", "sync", "io-util", "fs"] }
tokio-util = "0.7"
toml = "0.8"
