[package]
name = "kaonic-audio-ptt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaonic-audio-ptt"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
kaonic-gateway = { path = "../kaonic-gateway" }
kaonic-reticulum = { path = "../kaonic-reticulum" }
log = "0.4"
rand = "0.8"
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", branch = "fix/add-timer-configs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "process", "sync", "io-util", "fs"] }
tokio-util = "0.7"
toml = "0.8"
