[package]
name = "kaonic-dashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
kaonic-settings = { path = "../kaonic-settings" }

axum = "0.7"
cidr = { version = "0.2", features = ["serde"] }
maud = { version = "0.26", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
