[package]
name = "kaonic-dashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "kaonic_dashboard"
path = "src/lib.rs"

[[bin]]
name = "kaonic-dashboard"
path = "src/main.rs"

[dependencies]
axum  = "0.7"
maud  = { version = "0.26", features = ["axum"] }
log   = "0.4"
tokio = { version = "1", features = ["full"] }

# Only needed for the standalone binary
clap       = { version = "4", features = ["derive", "env"], optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = ["bin"]
bin = ["clap", "env_logger"]
