[package]
name = "kaonic-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
kaonic-vpn         = { path = "../kaonic-vpn", features = ["run"] }
kaonic-dashboard   = { path = "../kaonic-dashboard" }
kaonic-ctrl        = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
rns-vpn            = { git = "https://github.com/BeechatNetworkSystemsLtd/rns-vpn-rs" }
reticulum          = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", version = "0.1.*" }

axum       = "0.7"
cidr       = { version = "0.2", features = ["serde"] }
clap       = { version = "4", features = ["derive"] }
env_logger = "0.11"
log        = "0.4"
rand       = "0.8"
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tokio-util = "0.7"
socket2    = { version = "0.5", features = ["all"] }
if-addrs   = "0.13"
