[package]
name = "kaonic-installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kaonic-installer"
path = "src/main.rs"

[dependencies]
axum        = { version = "0.7", features = ["multipart"] }
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
toml        = "0.8"
zip         = "2"
sha2        = "0.10"
hex         = "0.4"
tempfile    = "3"
log         = "0.4"
env_logger  = "0.11"
clap        = { version = "4", features = ["derive"] }
tower-http  = { version = "0.5", features = ["limit", "cors"] }
