[workspace]
resolver = "2"

[package]
name = "kaonic-settings"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
radio-common = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
rusqlite  = { version = "0.31", features = ["bundled"] }
cidr      = { version = "0.2", features = ["serde"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
