[package]
name = "kaonic-vpn"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[features]
run = ["dep:rns-vpn", "dep:reticulum", "dep:kaonic-reticulum",
       "dep:tokio-util", "dep:cidr-v3"]

[dependencies]
rns-vpn          = { git = "https://github.com/BeechatNetworkSystemsLtd/rns-vpn-rs", optional = true }
reticulum        = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", version = "0.1.*", optional = true }
kaonic-reticulum = { path = "../kaonic-reticulum", optional = true }
cidr-v3          = { package = "cidr", version = "0.3", features = ["serde"], optional = true }
cidr             = { version = "0.2", features = ["serde"] }
radio-common     = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
tokio-util       = { version = "0.7", optional = true }

log   = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
