[package]
name = "kaonic-vpn"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[features]
# run = ["dep:rns-vpn", "dep:reticulum", "dep:kaonic-reticulum",
#        "dep:tokio-util", "dep:cidr-v3"]  # disabled: rns-vpn pins tokio 1.44 (incompatible with leptos 0.8)
run = ["dep:reticulum", "dep:kaonic-reticulum", "dep:tokio-util", "dep:cidr-v3"]

[dependencies]
# rns-vpn = { git = "https://github.com/BeechatNetworkSystemsLtd/rns-vpn-rs", optional = true }  # disabled: pins tokio 1.44
reticulum        = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "9d055d1d68658963d5cf0417e29c78e38cd4baff", optional = true }
kaonic-reticulum = { path = "../kaonic-reticulum", optional = true }
cidr-v3          = { package = "cidr", version = "0.3", features = ["serde"], optional = true }
cidr             = { version = "0.2", features = ["serde"] }
radio-common     = { git = "https://github.com/BeechatNetworkSystemsLtd/kaonic-radio" }
tokio-util       = { version = "0.7", optional = true }

log   = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
